--- a/pagina-libros-more.html
+++ b/pagina-libros-more.html
@@ -539,15 +539,15 @@
 <div class="libro">
         <img
           src="cabana2.jpg"
-          alt="Cabana  el chico d la última fila "
+          alt="Cabana  el chico de la última fila "
         />
         <div>
-          <p><strong>Cabana  el chico d la última fila </strong></p>
+          <p><strong>Cabana  el chico de la última fila </strong></p>
           <p class="precio">Precio: $10.000</p>
           <p>Condiciones: Nuevo.</p>
           <button
             class="btn"
-            onclick="agregarAlCarrito('Cabana  el chico d la última fila', 10000)"
+            onclick="agregarAlCarrito('Cabana  el chico de la última fila', 10000)"
           >
             Agregar al carrito
           </button>
