--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     <div class="libro">
         <img
-          src="Diver.jpg"
+          src="diver.jpg"
           alt="Divergente "
         />
         <div>
@@ -348,7 +348,7 @@
     
     <div class="libro">
         <img
-          src="Alask.jpg"
+          src="alask.jpg"
           alt="El día que dejó de nevar en Alaska"
         />
         <div>
@@ -769,3 +769,4 @@ function filtrarLibros() {
 </script>
   </body>
 </html>
+
