--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
   <a href="#terror">Terror/Thriller</a>
 </nav>
 
+<section id="misterio">
+      <h2>Misterio</h2>
+      </section>
+  
     <section id="fantasia">
       <h2>Fantasía/ficcion</h2>
       <div class="libro">
@@ -555,6 +559,10 @@
       </div>
     </section>
 
+<section id="autoconclusivos">
+      <h2>Autoconclusivos</h2>
+      </section>
+    
     <section id="policiales">
       <h2>Policiales</h2>
       </section>
@@ -769,4 +777,5 @@ function filtrarLibros() {
 </script>
   </body>
 </html>
+
 
